# cookiecutter-python-package

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .yamllint.yml  .yapfignore  CREDITS  CREDITS.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.rst  cookiecutter.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml  pre-commit.yml  tests.yml
docs/: conf.py  global.rst  index.rst
docs/addendums/: code_of_conduct.rst  credits.rst  license.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  cookiecutter_test_user_config.yaml  cookiecutter_test_user_config.yml  test_code_of_conduct.py  test_git_repo.py  test_license_file.py  test_manifest_file.py  test_readme_file.py  test_setup.py  test_sphinx_doc.py  user_config.yml
{{cookiecutter.project_slug}}/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/LICENSES/: BSD-3-Clause  BSD-3-Clause.rst  Proprietary  Proprietary.rst
{{cookiecutter.project_slug}}/docs/: conf.py  global.rst  index.rst
{{cookiecutter.project_slug}}/docs/addendums/: code_of_conduct.rst  index.rst
{{cookiecutter.project_slug}}/docs/dev_guide/: adding_console_scripts.rst  contributing.rst  index.rst  pre_commit_hooks.rst  style.rst
{{cookiecutter.project_slug}}/docs/dev_guide/testing/: index.rst  pytest.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/cli/: __init__.py  main.py
(+1 files in other folders)
