[metadata]
name = {{ cookiecutter.project_slug.replace('_', '-') }}
url = {{ cookiecutter.project_source_url }}
project_urls =
    Documentation = {{ cookiecutter.project_doc_url }}
    Code = {{ cookiecutter.project_source_url }}
license = {{ cookiecutter.project_license }}
author = {{ cookiecutter.project_author_name }}
author_email = {{ cookiecutter.project_author_email }}
maintainer = {{ cookiecutter.project_author_name }}
maintainer_email = {{ cookiecutter.project_author_email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: {{ cookiecutter.project_license }}
    {%- for py_version in cookiecutter.project_valid_python_versions.replace(" ", "").split(",") %}
    Programming Language :: Python :: {{ py_version }}
    {%- endfor %}
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= {{ cookiecutter.project_python_min_version }}

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug.replace('_', '-') }} = {{ cookiecutter.project_slug }}.cli:main
